--- a/src/components/default.scss
+++ b/src/components/default.scss
@@ -1,6 +1,35 @@
+.linearGradient{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  filter: contrast(290%) brightness(1000%);
+  background: 
+  linear-gradient(215deg, rgb(95, 57, 1), rgba(0, 0, 0, 0.5)),
+  url(../noise.svg);
+  z-index: -1;
+}
+
 .overCommon {
   border: 1px solid black;
   box-shadow: 1px 2px 0px rgba(0, 0, 0, .4);
+}
+
+.bg-custom-btn {
+  background-color: rgb(245, 239, 224) !important;
+  &:hover {
+    color: lightgray;
+  }
+}
+
+.child-obj-center {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  & > p {
+    font-weight: bold;
+  }
 }
 
 .overlayout {
@@ -13,7 +42,7 @@
   width: 100%;
   height: 100%;
   content: "";
-  background-color: white;
+  background-color: rgb(245, 239, 224);
 }
 
 .overChild {
@@ -46,7 +75,7 @@
 
 .overLayName {
   position: absolute;
-  background-color: white;
+  background-color: rgb(245, 239, 224);
   border: 1px solid black;
   padding: 0 1rem;
   top: 5px;
@@ -101,6 +130,7 @@
   left: -10px;
   margin-top: 1rem;
   padding: 2rem;
+  background-color: rgb(245, 239, 224);
   border: 1px solid black;
 }
 
@@ -108,19 +138,26 @@
   box-shadow: 2px 3px 0 rgba(black, .8);
 }
 .removeBackground {
-  background-color: transparent;
+  background-color: rgb(245, 239, 224);
   border-right-color: transparent;
 }
 
 .removeBorder {
   border-left-color: transparent;
+  background-color: rgb(245, 239, 224);
+  &:focus {
+    background-color: transparent;
+  }
 }
+
 .customBasicTablePos {
   position: relative;
   width: calc(100% + 10px);
-  //border: 2px solid gray;
-  min-height: 100vh;
+  border: 2px solid gray;
   padding: 0 1rem;
+  margin-top: 5px;
+  margin-bottom: 2rem;
+  background-color: rgb(245, 239, 224);
 
   & > .overLayNameSeeAll {
     position: absolute;
@@ -128,22 +165,27 @@
     width: calc(100% - 2rem);
     text-align: center
   }
-}
-.customTable {
-  position: absolute;
-  top: -2rem;
 
-  width: calc(100% - 2rem);
+  & > .custom-outl-table {
+    position: absolute;
+  }
+}
+
+.customTable {
+  // position: absolute;
+  top: -2rem;
+  width: 100%;
+  
   & > tbody {
     & > tr {
-      //&:first-child > td{
-      //  padding-top: 1.5rem;
-      //  border-top-color: transparent;
-      //}
+      &:first-child > td{
+       padding-top: 1.5rem;
+       background-color: transparent !important;
+      }
 
-      //&:last-child > td{
-      //  border-bottom-color: transparent;
-      //}
+      &:last-child > td{
+       border-bottom-color: transparent;
+      }
 
       & > td {
         //margin: 1rem;
